fixed overflow of resume and also changed style of resume pag of mobile screen

--- a/src/containers/about/styles.scss
+++ b/src/containers/about/styles.scss
@@ -99,6 +99,9 @@
 }
 
 @media only screen and (max-width:768px) {
+    .about{
+        overflow: hidden;
+    }
     .about_content{
         flex-direction: column;
     
